--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+.calendar-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
